@startuml

title __SCHEDULER's Class Diagram__\n

  namespace  {
    namespace rg.fog.scheduler {
      class org.fog.scheduler.StreamOperatorScheduler {
          + StreamOperatorScheduler()
      }
    }
  }
  

  namespace  {
    namespace rg.fog.scheduler {
      class org.fog.scheduler.TupleScheduler {
          + TupleScheduler()
          + getEstimatedFinishTime()
      }
    }
  }
  

  org.fog.scheduler.StreamOperatorScheduler -up-|> org.cloudbus.cloudsim.sdn.overbooking.VmSchedulerTimeSharedOverbookingEnergy
  org.fog.scheduler.TupleScheduler -up-|> org.cloudbus.cloudsim.CloudletSchedulerTimeShared


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
